--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "nodejs-mongodb-kubernetes",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "yashsharma205@gmail.com",
