--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
-  gemapp:
-    image: local-article:3
+  nodejs-kubernetes:
+    image: local-nodejs-kubernetes:3
     environment:  
       PORT: 80
       MONGO_DB_URL: mongodb://nodejs-kubernetes-mongodb:27017/nodejs-kubernetes
